--- a/src/Casa.html
+++ b/src/Casa.html
@@ -29,7 +29,7 @@
     <meta property="og:title" content="Casa">
     <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
-  <body data-home-page="Casa.html" data-home-page-title="Casa" data-path-to-root="./" data-include-products="false" class="u-black u-body u-xl-mode" data-lang="es"><header class="u-clearfix u-header" id="sec-489d"><div class="u-align-left u-clearfix u-sheet u-sheet-1">
+  <body data-path-to-root="./" data-include-products="false" class="u-black u-body u-xl-mode" data-lang="es"><header class="u-clearfix u-header" id="sec-489d"><div class="u-align-left u-clearfix u-sheet u-sheet-1">
         <h3 class="u-align-left-xs u-headline u-text u-text-body-alt-color u-text-1">
           <a href="/">jazz News</a>
         </h3>
