--- a/src/index.html
+++ b/src/index.html
@@ -333,17 +333,8 @@ Nogueira wrote the Carrefour Club jingle for the supermarket chain.&nbsp;<br>
             <p class="u-align-center u-text u-text-1">© 2024 ALEX NOGUEIRA </p>
           </div>
         </div>
-      </div></footer>
-    <section class="u-backlink u-clearfix u-grey-80">
-      <a class="u-link" href="https://nicepage.com/html-templates" target="_blank">
-        <span>HTML Templates</span>
-      </a>
-      <p class="u-text">
-        <span>created with</span>
-      </p>
-      <a class="u-link" href="https://nicepage.one" target="_blank">
-        <span>Best Website Builder</span>
-      </a>. 
-    </section>
+      </div>
+    </footer>
+  
   
 </body></html>
